# embeded-face_detect

./: CMakeLists.txt  readme.md
src/: face_detection.cpp
